test/fail/PostulateInMutual.agda

-- Currently postulates are not allowed in mutual blocks.
-- This might change.
module PostulateInMutual where

mutual
  postulate A : Set
  postulate B : Set

